Fixed dark mode, other styling issues

--- a/src/app/views/table/table.component.scss
+++ b/src/app/views/table/table.component.scss
@@ -111,7 +111,7 @@ mat-nav-list a {
     padding: 5px;
 
     .name {
-      padding-top: 4px;
+      padding-top: 8px;
     }
 
     &.red {
@@ -132,7 +132,7 @@ mat-nav-list a {
     padding: 5px;
 
     .name {
-      padding-top: 4px;
+      padding-top: 8px;
     }
 
     &.red {
